# t113-s3-hal

./: .clang-format  CMakeLists.txt
hal/: clock.c  clock.cpp  clock.h  gpio.c  gpio.h  interrupt.h  pwm.c  pwm.cpp  pwm.h  timer.c  timer.h  uart.c  uart.h
hal/regs/: ccu.hpp  pwm.hpp
std/: common.h  register.hpp
